# SH_ESP32

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  app_main.c  idf_component.yml
main/core/: component_config.c  device_manager.c  feature_registry.c  io_control.c  update_ota.c
main/core/certs/: ca_cert.pem
main/features/automation/: aut_event.c  aut_none.c  aut_time.c
main/features/components/: input_analog.c  input_binary.c  output_analog.c  output_binary.c
main/features/device/: dev_light.c  dev_relay.c  dev_sensor.c
main/features/interface/: int_cli.c  int_mqtt.c  int_rest.c  int_webui.c
main/features/security/: sec_auth.c  sec_none.c
main/features/services/: sys_time.c  wifi_ap.c
main/include/core/: component_config.h  component_types.h  device_manager.h  device_types.h  feature_registry.h  io_control.h  update_ota.h
main/include/core/components/: component_config.h  component_pins.h
main/include/features/automation/: aut_event.h  aut_none.h  aut_time.h
main/include/features/components/: input_analog.h  input_binary.h  output_analog.h  output_binary.h
main/include/features/device/: dev_light.h  dev_relay.h  dev_sensor.h
main/include/features/interface/: int_cli.h  int_mqtt.h  int_rest.h  int_webui.h
main/include/features/security/: sec_auth.h  sec_none.h
main/include/features/services/: sys_time.h  wifi_client.h
main/include/services/: wifi_ap.h
main/services/: wifi_client.c
partitions/: partitions.csv
